# chesslib

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  attacks.cpp  attacks.h  bitboard.h  chess.cpp  chess960_tests.cpp  fwd_decl.h  movegen.cpp  movegen.h  moves_io.cpp  moves_io.h  non_core_tests.cpp  perft_speed.cpp  position.cpp  position.h  printers.cpp  printers.h  repetition.h  test.cpp  tests.cpp  types.h  zobrist.cpp  zobrist.h
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: clang-format.yml  cmake-multi-platform.yml  iwyu.yml  test.yml  try_compile.yml
examples/: dbg_efficiency.cpp  perft_with_tt.cpp
tests/: hello_catch2.test.cpp
